# lnflow

./: .gitignore  CODE_REVIEW_HTLC_MONITORING.md  README.md  REPOSITORY_SETUP.md  analyze_data.py  lightning_experiment.py  lightning_htlc_analyzer.py  lightning_policy.py  pyproject.toml  requirements.txt  run_experiment.py  test_charge_lnd.conf  test_config.conf  test_optimizer.py
config/: default.json
docs/: EXPERIMENT_GUIDE.md  EXPERIMENT_SUMMARY.md  GRPC_UPGRADE.md  LIGHTNING_POLICY_README.md  MISSED_ROUTING_OPPORTUNITIES.md  README.md  SECURITY_ANALYSIS_REPORT.md  analysis_improvements.md  experiment_design.md
examples/: advanced_policy.conf  basic_policy.conf
scripts/: advanced_fee_strategy.sh  apply_fee_recommendations.sh  collect_data.sh  inbound_fee_commands.sh  quick_fee_updates.sh  setup_grpc.sh
src/: data_fetcher.py  main.py
src/analysis/: analyzer.py
src/api/: client.py
src/experiment/: controller.py  lnd_grpc_client.py  lnd_integration.py
src/models/: channel.py
src/monitoring/: __init__.py  htlc_monitor.py  opportunity_analyzer.py
src/policy/: engine.py  manager.py
src/strategy/: advanced_optimizer.py  comparison_analysis.py  optimizer.py
src/utils/: config.py  database.py
