[project]
name = "lightning-fee-optimizer"
version = "0.1.0"
description = "Lightning Network channel fee optimization agent"
authors = [{name = "Lightning Fee Optimizer"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lightning-fee-optimizer = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py38"